update weight calculation data